--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 PORTFOLIO DOCUMENTATION
 
 Created by Margaret Dorsey
-Last Updated 10/18/2015
+Repo Created 10/18/2015	
+Last Updated 10/20/2015
 
 All html, css, javascript, etc by me.
 
