added some more css, added fonts, filler html in index

--- a/README
+++ b/README
@@ -7,8 +7,11 @@ Last Updated 10/20/2015
 All html, css, javascript, etc by me.
 
 Fonts used:
+Across The Road by Jonathan S. Harris
+Nobility Casual by Digital Graphic Labs
+Caviar Dreams by Lauren Thompson
 
-
+Logo was created by me. Any images, video, or other media on the page are solely my own.
 
 Version 1.0 of this site was created for IGME 230, Web Design and Implementation with Professor Sean Boyle, and as such only partially represents my portfolio as to keep with project guidelines.
 
