added some content to the index, sorted out some css, added logo, etc

--- a/README
+++ b/README
@@ -2,14 +2,18 @@ PORTFOLIO DOCUMENTATION
 
 Created by Margaret Dorsey
 Repo Created 10/18/2015	
-Last Updated 10/22/2015
+Last Updated 10/24/2015
 
 All html, css, javascript, etc by me.
 
 Fonts used:
+English-
 Across The Road by Jonathan S. Harris
 Nobility Casual by Digital Graphic Labs
 Caviar Dreams by Lauren Thompson
+
+Japanese-
+Hakusyu Kaisho Bold by Hakusyu Fonts
 
 Logo was created by me. Any images, video, or other media on the page are solely my own.
 
