new japanese fonts, fixed a verb conjugation

--- a/README
+++ b/README
@@ -13,7 +13,7 @@ Nobility Casual by Digital Graphic Labs
 Caviar Dreams by Lauren Thompson
 
 Japanese-
-Hakusyu Kaisho Bold by Hakusyu Fonts
+EPSON 行書体Ｍ   by EPSON. 
 
 Logo was created by me. Any images, video, or other media on the page are solely my own.
 
