updated notes, readme

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ PORTFOLIO DOCUMENTATION
 
 Created by Margaret Dorsey
 Repo Created 10/18/2015	
-Last Updated 11/11/2015
+Last Updated 11/12/2015
 
 All html, css, javascript, etc by me.
 
@@ -10,7 +10,7 @@ Fonts used:
 English-
 Across The Road by Jonathan S. Harris
 Nobility Casual by Digital Graphic Labs
-Caviar Dreams by Lauren Thompson
+Rounded Elegance by Douglas Charles Cunha
 
 Japanese-
 EPSON 行書体Ｍ   by EPSON. 
