--- a/README
+++ b/README
@@ -2,18 +2,18 @@ PORTFOLIO DOCUMENTATION
 
 Created by Margaret Dorsey
 Repo Created 10/18/2015	
-Last Updated 11/12/2015
+Last Updated 01/04/2016
 
-All html, css, javascript, etc by me.
+All html, css, javascript, php, etc by me with the exception of phpMailer.
+This site is now hosted on heroku to support php, but still running through
+gh-pages.
 
 Fonts used:
-English-
 Across The Road by Jonathan S. Harris
 Nobility Casual by Digital Graphic Labs
 Rounded Elegance by Douglas Charles Cunha
 
-Japanese-
-EPSON 行書体Ｍ   by EPSON. 
+ 
 
 Logo was created by me. Any images, video, or other media on the page are solely my own.
 
@@ -21,3 +21,4 @@ Version 1.0 of this site was created for IGME 230, Web Design and Implementation
 
 Versions after 12/2015 are designed explicitly to present my portfolio with no outside constraints.
 
+Currently Refactoring.
